--- a/fstage.css
+++ b/fstage.css
@@ -527,7 +527,7 @@ nav i:after {
 /* ANIMATE */
 
 .animate {
-	transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
+	transition: transform 300ms ease-in-out, opacity 3000ms ease-in-out;
 }
 
 .animate.none {
@@ -539,7 +539,7 @@ nav i:after {
 }
 
 .fade.out, .fade.hidden {
-	opacity: 0
+	opacity: 0;
 }
 
 .scale.out, .scale.hidden {
