--- a/fstage.css
+++ b/fstage.css
@@ -1,4 +1,11 @@
-/* CONFIG */
+/**
+ * FSTAGE.css
+ *
+ * About: A lean css skeleton library for developing modern web apps
+ * Version: 0.0.2
+ * License: MIT
+ * Source: https://github.com/codi0/fstage
+**/
 
 :root {
 
