--- a/fstage.css
+++ b/fstage.css
@@ -2,7 +2,7 @@
  * FSTAGE.css
  *
  * About: A skeleton css library for developing modern web apps
- * Version: 0.1.6
+ * Version: 0.1.7
  * License: MIT
  * Source: https://github.com/codi0/fstage
 **/
@@ -45,7 +45,7 @@
 	--input-active-color: #0288d1;
 	--input-error-color: #d32f2f;
 
-	--nav-height: 50px;
+	--nav-height: 42px;
 	--footer-height: 2em;
 	--image-crop-height: 200px;
 	--small-font-size: 0.875em;
@@ -114,13 +114,13 @@ body {
 /* LINKS */
 
 a {
-	color: var(--link-color);
+	cursor: pointer;
 	text-decoration: none;
 	background-color: transparent;
-	cursor: pointer;
+	color: var(--link-color);
 }
 
-a:hover, a:active, a.active {
+a:hover, a:active, a.active, a.current, a[aria-current="page"] {
 	color: var(--link-hover-color);
 }
 
@@ -128,7 +128,7 @@ a.alt {
 	color: var(--link-alt-color);
 }
 
-a.alt:hover {
+a.alt:hover, a.alt:active, a.alt.active, a.alt.current, a.alt[aria-current="page"] {
 	color: var(--link-alt-hover-color);
 	text-decoration: underline;
 }
@@ -166,6 +166,15 @@ label {
 	display: block;
 	margin-bottom: 4px;
 	font-size: var(--small-font-size);
+}
+
+fieldset {
+	border: 1px solid var(--input-border-color);
+}
+
+legend {
+	font-size: var(--small-font-size);
+	padding: 0 5px;
 }
 
 form .field {
@@ -223,8 +232,16 @@ button.alt, .button.alt, [type="button"].alt, [type="submit"].alt, [type="reset"
 	color: var(--button-alt-color);
 }
 
-button + button, [type="submit"] + [type="button"] {
+button + button, .button + .button {
 	margin-top: 10px;
+}
+
+.button:hover {
+	color: var(--button-color);
+}
+
+.button.alt:hover {
+	color: var(--button-alt-color);
 }
 
 @media screen and (min-width: 40em) {
@@ -234,7 +251,7 @@ button + button, [type="submit"] + [type="button"] {
 		padding: 10px 20px;
 	}
 
-	button + button, [type="submit"] + [type="button"] {
+	button + button, .button + .button {
 		margin-top: 0;
 		margin-left: 10px;
 	}
@@ -271,6 +288,57 @@ button + button, [type="submit"] + [type="button"] {
 }
 
 
+/* LISTS */
+
+li {
+	margin-bottom: 5px;
+}
+
+li:last-of-type {
+	margin-bottom: 0;
+}
+
+
+/* TABLES */
+
+table {
+	width: 100%;
+	font-size: var(--small-font-size);
+}
+
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th {
+	background: #eee;
+	font-weight: bold;
+}
+
+th, td {
+	padding: 8px;
+	vertical-align: middle;
+}
+
+td.top {
+	vertical-align: top;
+}
+
+td.bottom {
+	vertical-align: bottom;
+}
+
+td.center {
+	text-align: center;
+}
+
+figure {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+
 /* MAIN */
 
 main {
@@ -304,17 +372,64 @@ main + footer {
 
 /* NAV */
 
-nav, nav .toggle {
+nav {
 	position: relative;
 	background: transparent;
+}
+
+nav a {
+    display: flex;
+	align-items: center;
+	text-align: left;
+	width: auto;
+	height: var(--nav-height);
+	line-height: 1.0;
+	padding: 0 15px;
+	color: var(--nav-color);
+	text-decoration: none;
+}
+
+nav a.child {
+	font-size: var(--small-font-size);
+	padding-left: 20px;
+}
+
+nav a:hover {
+	color: var(--nav-hover-color);
+	background: var(--nav-hover-background);
+}
+
+nav .icons {
+	position: relative;
+	background: transparent;
+}
+
+nav .icons a {
+	padding: 0;
+	height: auto;
+	color: inherit;
+	background: transparent;
+}
+
+nav .toggle {
+	display: block;
+	position: absolute;
+	top: 6px;
+	right: 10px;
+	cursor: pointer;
+	font-size: 32px;
+	font-style: normal;
+	background: transparent;
+}
+
+nav .toggle:after {
+	content: '\2807';
 }
 
 nav .menu {
 	position: absolute;
 	top: 40px; right: 24px;
-	display: inline-block;
-	width: auto;
-	min-width: 150px;
+	min-width: 120px;
 	background: var(--nav-background);
 	border-radius: 2px;
 	box-shadow: 0 10px 6px -6px #777;
@@ -328,43 +443,28 @@ nav.open .menu {
 	transform: scale(1,1);
 }
 
-nav a {
-	display: block;
-	text-align: left;
-	width: 100%;
-	height: var(--nav-height);
-	line-height: var(--nav-height);
-	padding: 0 15px;
-	color: var(--nav-color);
-	text-decoration: none;
-}
-
-nav a:hover {
-	color: var(--nav-hover-color);
-	background: var(--nav-hover-background);
-}
-
-nav a.active {
-	font-weight: bold;
-}
-
-nav i {
-	display: block;
-	font-style: normal;
-	font-size: 32px;
-	position: absolute;
-	top: 6px;
-	right: 10px;
-	cursor: pointer;
-}
-
-nav i:after {
-	content: '\2807';
+nav .d {
+	display: none;
 }
 
 @media screen and (min-width: 40em) {
 
-	nav .toggle {
+	nav {
+		position: relative;
+	}
+
+	nav a {
+		flex-grow: 1;
+		height: auto;
+		text-align: center;
+	}
+
+	nav a.active {
+		color: var(--nav-active-color);
+		background: var(--nav-active-background);
+	}
+
+	nav .icons, nav .toggle {
 		display: none;
 	}
 
@@ -377,15 +477,12 @@ nav i:after {
 		transition: none;
 	}
 
-	nav a {
-		flex-grow: 1;
-		text-align: center;
+	nav .d {
+		display: flex;
 	}
 
-	nav a.active {
-		color: var(--nav-active-color);
-		background: var(--nav-active-background);
-		font-weight: normal;
+	nav .m {
+		display: none;
 	}
 
 }
@@ -426,21 +523,18 @@ nav i:after {
 
 .pagination {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
-.pagination * {
-	display: inline-block;
-	padding: 4px 8px;
-	margin: 0 -1px;
-}
-
-.pagination a {
-	border: 1px solid #ddd;
+.pagination a, .pagination .active, .pagination .current, .pagination .disabled {
 	padding: 8px 16px;
+	border: 1px solid #ddd;
 }
 
-.pagination .active {
+.pagination .active, .pagination .current {
 	background: #f1f1f1;
 }
 
@@ -509,33 +603,34 @@ nav i:after {
 }
 
 .overlay .inner {
+	position: relative;
 	width: 90%;
 	max-width: 500px;
 	margin: auto;
-	background: #fff;
 	color: #3c434a;
+	background: #fff;
+	border-radius: 4px;
 }
 
 .overlay .head {
 	display: flex;
 	align-items: center;
-	padding: 6px 10px;
+	padding: 8px 16px;
+	font-size: 1.2em;
 	font-weight: bold;
-	line-height: 1.0;
-	background: #ddd;
+}
+
+.overlay .body {
+	padding: 8px 16px;
+    max-height: calc(100vh - 20px);
+    overflow-y: auto;
 }
 
 .overlay .close {
 	cursor: pointer;
-	font-size: 1.4em;
+	font-size: 1.2em;
 	font-weight: normal;
 	margin-left: auto;
-}
-
-.overlay .body {
-	padding: 10px;
-    max-height: calc(100vh - 20px);
-    overflow-y: auto;
 }
 
 
@@ -563,6 +658,7 @@ nav i:after {
 	width: 100%;
 	height: auto;
     border: 0;
+    z-index: 10;
 }
 
 
