--- a/fstage.css
+++ b/fstage.css
@@ -2,7 +2,7 @@
  * FSTAGE.css
  *
  * About: A skeleton css library for developing modern web apps
- * Version: 0.1.8
+ * Version: 0.1.9
  * License: MIT
  * Source: https://github.com/codi0/fstage
 **/
@@ -149,7 +149,7 @@ input, textarea, select, button, .button {
 	width: 100%;
 	height: calc(var(--input-font-size) * 2.333);
 	margin: 0;
-	padding: 0 calc(var(--input-font-size) / 2);
+	padding: 10px calc(var(--input-font-size) / 2);
 	background: #fff;
 	border: 1px solid var(--input-border-color);
 	font-family: inherit;
@@ -390,8 +390,9 @@ nav a {
 	align-items: center;
 	text-align: left;
 	width: auto;
-	line-height: 1.0;
+	height: 45px;
 	padding: 0.8em;
+	line-height: 1.0;
 	color: var(--nav-color);
 	text-decoration: none;
 }
@@ -554,6 +555,7 @@ nav .d {
 /* NOTICE */
 
 .notice {
+	position: relative;
 	padding: 12px;
 	border: 0px solid #000;
 	border-left-width: 4px;
@@ -589,9 +591,19 @@ nav .d {
 	border-color: #ffb900;
 }
 
+.notice .close {
+	font-size: 20px;
+	position: absolute;
+	top: 8px; right: 8px;
+}
+
 .notice .title {
 	font-size: 1.1em;
 	font-weight: bold;
+}
+
+.notice .close + .title {
+	margin-right: 15px;
 }
 
 
