--- a/fstage.css
+++ b/fstage.css
@@ -72,6 +72,10 @@
 	margin-top: var(--body-vertical-rhythm);
 }
 
+header, main, footer, body, body > * + * {
+	margin-top: 0;
+}
+
 html {
 	width: 100%;
 	height: 100%;
@@ -105,6 +109,11 @@ iframe {
 
 .small {
 	font-size: var(--small-font-size);
+}
+
+.responsive {
+	max-width: 100%;
+	height: auto;
 }
 
 .hidden {
@@ -727,6 +736,7 @@ nav .d {
 	color: #3c434a;
 	background: var(--body-background);
 	border-radius: 4px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .overlay .head {
